fixed github overlap, removed position relative

--- a/portfolio/pstyle.css
+++ b/portfolio/pstyle.css
@@ -304,7 +304,6 @@ main h1 {
 }
 
 .inbetween .col1 div {
-  position: relative;
   background-color: var(--inbetween-blue);
   width: 100%;
 }
@@ -323,7 +322,6 @@ main h1 {
 
 .inbetween .col1 div:hover {
   background-color: rgb(22, 22, 22, 0.5);
-  /* border-radius: 50%; */
   transition: 0.3s all cubic-bezier(0.075, 0.82, 0.165, 1);
 }
 
@@ -332,10 +330,6 @@ main h1 {
 }
 
 /* || ib COLUMN 2 */
-
-.inbetween .col2 {
-  position: relative;
-}
 
 .inbetween .col2 h2 {
   display: flex;
@@ -373,15 +367,16 @@ main h1 {
   transition: all 0.2s cubic-bezier(0.075, 0.82, 0.165, 1);
 }
 
-.inbetween .col2 img {
-  display: inline-block;
-  max-width: 100%;
+.inbetween .col2 div {
+  width: 100%;
   height: 100%;
+  background-size: cover;
+  background-image: url("../media/in-betweenSite.png");
 }
 
 /* || media queries */
 
-@media screen and (min-width: 480px) {
+@media screen and (min-width: 481px) {
   .mobileContainer {
     display: none;
   }
@@ -401,7 +396,7 @@ main h1 {
   }
 
   main {
-    margin: 0 0 0 5vw;
+    margin: 0 5vw 0 5vw;
   }
 
   .flexWrapper {
@@ -441,11 +436,10 @@ main h1 {
   .inbetween .col1 {
     flex-flow: row wrap;
     justify-content: space-evenly;
-    align-items: center;
+    align-items: normal;
   }
 
-  .inbetween .col2 h2 {
-    transform: scale(1);
-    background-color: rgba(0, 0, 0, 0.6);
+  .col2 {
+    height: 30vh;
   }
 }
